--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ repo_url: https://github.com/wytamma/guigaga
 theme:
   name: "material"
   homepage: https://guigaga.wytamma.com
-  logo: assets/android-chrome-512x512.png
+  # logo: assets/android-chrome-512x512.png
   favicon: assets/favicon.ico
   palette: 
     - scheme: default
